# gps3

./: -20140809-060110.nmea  DESCRIPTION.rst  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  agegps3.py  agps3.py  ahuman.py  client.py  contributors.txt  datatest.py  demo_gegps3.py  dom.py  eafgps3.py  fake.py  gdop_gegps3.py  gegps3.py  gepe3.py  gepeex.py  gpex3.py  gps.py  gps3.py  gps3test.py  gpx3logger.orig.py  gpx3logger.py  human.py  jsontogpx.py  log.py  misc.py  setup.cfg  setup.py
$APP_CONFIG$/: CodeGlance.xml  CodeOutlinePlugin.xml  bitbucket_settings.xml  colors.scheme.xml  customization.xml  eclipseCodeFormatter.xml  editor.codeinsight.xml  editor.rich.copy.xml  editor.xml  emmet.xml  extended-code-sense-options.xml  file.template.settings.xml  filetypes.xml  find.xml  gisttemplates_settings.xml  github_settings.xml  gitignore.xml  ide.general.xml  ignore.xml  notifications.xml  options.xml  other.xml  packages.xml  path.macros.xml  plantuml.cfg  print.xml  project.default.xml  smartereditor.xml  template.settings.xml  ui.lnf.xml  vcs.xml  xStructure.xml
$ROOT_CONFIG$/codestyles/: Default _1_.xml
$ROOT_CONFIG$/colors/: Darcula copy.icls  Github copy.icls  warmeon.icls
$ROOT_CONFIG$/filetypes/: conky.xml
$ROOT_CONFIG$/inspection/: 2_7.xml  Default.xml  __deleted.xml
$ROOT_CONFIG$/shelf/: Uncommitted_changes_before_update_operation_at_2_17_15_10_12_PM_[Default].patch  (+4 more)
examples/: agegps3.py  ahuman.py  gegps3.py  human.py  thread_example.py
gps3/: agps3.py  agps3threaded.py  ahuman.py  gps3.py  gps3threaded.py  misc.py  thread_example.py
(+4 files in other folders)
